# useful_rdkit_utils

./: .gitattributes  .gitignore  .lgtm.yml  .readthedocs.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  MANIFEST.in  README.md  explore_functional_group_filters.ipynb  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
data/: chembl_ring_systems.csv  test.smi
devtools/: README.md
devtools/conda-envs/: test_env.yaml
devtools/legacy-miniconda-setup/: before_install.sh
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat  requirements.txt
notebooks/: README.md  bootstrap_AUC.ipynb  catboost_wrapper.py  compare_mordred_rdkit.ipynb  demo_REOS.ipynb  demo_cross_validate.ipynb  demo_descriptors.ipynb  demo_ring_systems.ipynb  demo_useful_rdkit_utils.ipynb  explore_functional_group_filters.ipynb  ffnn.py  lgbm_wrapper.py  model_comparison.ipynb  parallel_conformer_generation.ipynb  sort_and_slice_ecfp_featuriser.py  zinc_sample.smi
tests/: test_chemreps.txt  test_geometry.py  test_reos.py  test_ring_systems.py  test_useful_rdkit_utils.py
useful_rdkit_utils/: __init__.py  _version.py  build_ring_dictionary.py  descriptor_preprocessor.py  descriptors.py  geometry.py  jupyter_utils.py  misc_utils.py  model_comparison.py  optional.py  pandas_utils.py  reactions.py  reos.py  ring_system_finder.py  ring_system_lookup.py  ring_systems.py  sali.py  scaffold_finder.py  seaborn_utils.py  silly_walks.py  split_utils.py  stat_utils.py  units.py  useful_rdkit_utils.py
(+24 files in other folders)
